Fixed visual bug on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -766,7 +766,7 @@ h4 {
 
 h2 {
   text-align: center;
-  font-size: calc(3.5vh + 3vw);
+  font-size: calc(2.5vh + 3vw);
 }
 
 .boardGrid {
